problems with roles